2021-12-01  Mark Wielaard  <mark@klomp.org>

	* debuginfod-client.c (debuginfod_query_server): Free tmp_url on
	realloc error. curl_free escaped_string on error. Fix error out
	goto on curl_easy_init failure. Only cleanup data[i] handle and
	response_data if it was initialized.

2021-12-01  Mark Wielaard  <mark@klomp.org>

	* debuginfod-client.c (timestamp): Use gmtime_r instead of gmtime.
	(add_mhd_last_modified): Likewise.

2021-11-10  Érico N. Rolim  <erico.erc@gmail.com>

	* debuginfod.cxx: include "system.h" under 'extern "C"' block.

2021-11-05  Frank Ch. Eigler  <fche@redhat.com>

	PR28430
	* debuginfod.cxx (parse_opt): Add "--passive" flag.  Complain
	about inconsistent flags.
	(main): In passive mode, suppress scan/groom/traverse threads and
	other read-write database ops.

2021-11-04  Frank Ch. Eigler  <fche@redhat.com>

	PR28514
	* debuginfod.cxx (groom): Rework into separate decision/action
	phases.  Add new metrics to monitor progress.  Limit indefinite
	operation times to avoid starving rescan.

2021-10-23  Frank Ch. Eigler  <fche@redhat.com>

	PR28240
	* debuginfod-client.c (debuginfod_query_server): Correct
	negative-hit cache check sequence for root user.

2021-10-15  Mark Wielaard  <mark@klomp.org>

	* debuginfod-client.c (debuginfod_query_server): Set
	CURLOPT_PROTOCOLS.

2021-10-06  Di Chen <dichen@redhat.com>

	PR28242
	* debuginfod.cxx (inc_metrics, add_metrics): Add two-tag variants.
	(handler_cb): Call it with artifacttype for http_responses_* metrics.
	(handle_buildid): Sanitize artifacttype if necessary.
	(dwarf_extract_source_path): Pass sanitizable string param.

2021-09-17  Noah Sanci  <nsanci@redhat.com>

	* debuginfod-client.c (debuginfod_query_server): curl_multi_perform
	now occurs before checking if response headers have arrived.

2021-09-14  Frank Ch. Eigler <fche@redhat.com>

	PRPR28339
	* debuginfod.cxx (waitq::fronters): New field.
	(waitq::wait_idle): Respect it.
	(waitq::done_front): New function.